[package]
name = "scdf-status"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
x11 = { version = "2.20.1", features = ["xlib"] }
#psutil = "3.2.2"
sys-info = "0.9"

[profile.release]
opt-level = "s"
strip = true
